rank card section alignment issue solved

--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,9 @@ li {
 	display: flex;
 	justify-content: space-between;
 }
+.ingredients-section{
+	
+}
 .subtitle-rank-button-wrap {
 	margin-top: 6rem;
 }
@@ -365,18 +368,6 @@ li {
 	word-break: break-all;
 }
 
-.button-section {
-	border: none;
-	outline: none;
-	background-color: var(--primary-color);
-	color: var(--white-color);
-	padding: 1rem 2rem;
-	border-radius: var(--primary-border-radius);
-	font-size: 1.6rem;
-	cursor: pointer;
-	width: 14%;
-	margin-left: 65rem;	
-}
 
 .ingredients-section {
 	flex-basis: 65%;
@@ -400,14 +391,26 @@ li {
 
 
 .rank-section {
-	flex-basis: 20%;
+	flex-basis: 13%;
 }
 
 .rank-cards {
-	margin-top: 7rem;
-	height: 100%;
-	width: 100%;
+	width:100%;
+	height:100%;
 }
+
+.button-section {
+	border: none;
+	outline: none;
+	background-color: var(--primary-color);
+	color: var(--white-color);
+	padding: 1rem 2rem;
+	border-radius: var(--primary-border-radius);
+	font-size: 1.6rem;
+	cursor: pointer;
+} 
+
+
 .rank-card {
 	padding: 2rem 2rem;
 	border: 2px dashed var(--primary-color);
@@ -418,6 +421,9 @@ li {
 	color: var(--primary-color);
 	opacity: 0.6;
 	position: relative;
+	text-align: center;
+	width:100%;
+	height:25%;
 }
 .rank-card-text {
 	position: absolute;
